syntax = "proto3";
package search.v1;
option go_package = "github.com/clpombo/search/gen/go/v1";


// This is what will be exchanged between middlewares
message ApplicationMessageWithHeaders {
    string channel_id = 1;  // We'll use UUIDv4. It's a global ID shared by all participants
    
    // This is necessary because URLs don't univocally determine apps. There can be multiple applications
    // behind the same middleware (there is a 1:1 mapping between URLs and middlewares)
    string sender_id = 2;    // appid de app emisora
    string recipient_id = 3; // appid de app receptora

    // TODO: how to avoid spoofing?

    MessageContent content = 4;

}


// This is what will be sent from an app to the middleware
message AppSendRequest {
    string channel_id = 1;
    string recipient = 2; // name of the recipient in the local contract
    MessageContent content = 3;
}

// This is what will be sent from the middleware to a local app
message AppRecvResponse {
    string channel_id = 1;
    string sender = 2; // name of the sender in the local contract
    MessageContent content = 3;
}

// This is the message content that is sent by the app (this is copied as-is by the middlewares)
message MessageContent {
    bytes body = 1;
}